gccida/g3/distribute_notes
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12554:4: error: expected ';' after expression
rtx v17; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12554:5: error: use of undeclared identifier 'v17'
rtx v17; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12556:4: error: expected ';' after expression
rtx v19; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12556:5: error: use of undeclared identifier 'v19'
rtx v19; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12558:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12560:4: error: expected ';' after expression
rtx reg_note; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12560:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // r14 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12561:4: error: expected ';' after expression
rtx real_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12561:5: error: use of undeclared identifier 'real_insn'; did you mean 'next_insn'?
rtx real_insn; // rax 
    ^~~~~~~~~
    next_insn
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/rtl.h:1347:12: note: 'next_insn' declared here
extern rtx next_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12566:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12566:5: error: use of undeclared identifier 'v30'; did you mean 'v20'?
rtx v30; // rax 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12557:18: note: 'v20' declared here
 struct rtx_def *v20; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12569:4: error: expected ';' after expression
rtx v33; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12569:5: error: use of undeclared identifier 'v33'
rtx v33; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12577:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12577:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12582:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12582:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12591:4: error: expected ';' after expression
rtx v56; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/combine.c:12591:5: error: use of undeclared identifier 'v56'
rtx v56; // rbp 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_notes/src/obj/combine.o] Error 1
